--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,14 +8,12 @@ header h1{
     font-size: 40px;
     color: #fce138;
     margin: 0;
-    display: inline;
 }
  header a{
      text-decoration: none;
      color:#fce138;
  }
  header nav{
-     float: right;
      margin: 7px 0;
  }
  header nav ul li{
@@ -30,6 +28,9 @@ header nav ul li a{
 header{
     padding: 20px 35px;
     background-color:#39a6b2;
+    display:flex;
+    justify-content: space-between;
+    flex-wrap:wrap;
 }
 body {
     color: #39a6b2;
